c18: Small screen overflow problem completely solved

--- a/css/navigation/search.css
+++ b/css/navigation/search.css
@@ -65,7 +65,7 @@
 #background-shadow{
     position:absolute;
     width: 100%;
-    height: 100vw;
+    height: 100vh;
     background-color: #47546799;
     backdrop-filter: blur(7.5px);
 }
